--- a/works-in-progress.html
+++ b/works-in-progress.html
@@ -109,7 +109,29 @@
 |___|___|  /  |____|     |__|   \____/\___  /|__|    \___  >____  >____  >
          \/                          /_____/             \/     \/     \/  
   </pre>
-  <div class="subtitle">updated April 2025</div>
+  <div class="subtitle">updated July 2025</div>
+
+  <div class="carousel-wrapper">
+    <div class="carousel">
+      <div class="carousel-images" id="carouselTrack0">
+        <img src="Killdozer Progress 1.jpg" alt="Killdozer Progress 1.jpg" style="--rotate: 2deg;">
+        <img src="Killdozer Progress 2.jpg" alt="Killdozer Progress 2.jpg" style="--rotate: -3deg;">
+        <img src="Killdozer Progress 3.jpg" alt="Killdozer Progress 3.jpg" style="--rotate: 4deg;">
+        <img src="Killdozer Progress 4.jpg" alt="Killdozer Progress 4.jpg" style="--rotate: -2deg;">
+        <img src="Killdozer Progress 5.jpg" alt="Killdozer Progress 5.jpg" style="--rotate: 3deg;">
+        <img src="Killdozer Progress 6.jpg" alt="Killdozer Progress 6.jpg" style="--rotate: -4deg;">
+      </div>
+    </div>
+    <div class="carousel-controls">
+      <span onclick="moveSlide(-1, 0)">&lt;==</span>
+      <span onclick="moveSlide(1, 0)">==&gt;</span>
+    </div>
+  </div>
+  <div class="caption">
+    <h2>Untitled Killdozer Piece</h2>
+    <p>Graphite/Colored Pencil/Ink on Mixed Media, 2025 - Progress with sketches</p>
+  </div>
+
 
   <div class="carousel-wrapper">
     <div class="carousel">
