Update bits.html and gallery layout

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,12 @@
   <title>Contact - Lohi Wean</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      overflow-x: hidden; /* Prevent horizontal scrolling */
+    }
     body {
       background-color: #1b1b1b;
       color: #e6ff8c;
@@ -139,6 +145,7 @@
       #########        ####                    ##########      
       #########        ####                     #########      
       #########        ####        #####        #########      
+      #########        ####       #######        ########      
       #########        ####       #######        ########      
       #########        ####       #######        ########      
       #########        ####       #######        ########      
