--- a/works-in-progress.html
+++ b/works-in-progress.html
@@ -6,6 +6,12 @@
   <title>Works in Progress</title>
   
 <style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+  }
   body {
     background-color: #1a1a1a;
     color: #e6ff8c;
