--- a/works-on-skin.html
+++ b/works-on-skin.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Works On Skin</title>
   <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      overflow-x: hidden; /* Prevent horizontal scrolling */
+    }
     body {
       background-color: #1e1e1b;
       color: #d9d9c2;
